@@ -18,6 +18,10 @@ Revision history for Perl extension App::Sqitch
        `script_hash`. This is to allow a deploy script to be used in more than
        one project in a single database. Thanks to Timothy Procter for the
        report.
+     - Updated the registry check constraints to have consistent names on the
+       engines that support them. This will make it easier to modify the
+       constraints in the future.
+       
 
 0.9991 2015-04-03T23:14:39Z
      [Improvements]
